tests/error/errors_on_usage/while_new_var_functional.py
from tests.error.util import guppy


@guppy
def foo(x: bool) -> int:
    _@functional
    while x:
        y = 5
    return y
